feat: enable to unset github repo
