# api-doc.yaml
@@ -536,7 +536,7 @@ paths:
               $ref: '#/components/responses/NotFoundErrorResponse'
   /projects/{project-id}/github-repo:
     post:
-      summary: 'Connect GitHub repo to the project'
+      summary: 'Set GitHub repo for the project'
       security:
         - bearerAuth: [ ]
       tags:
@@ -551,7 +551,7 @@ paths:
               $ref: '#/components/schemas/ProjectGithubRepoRequest'
       responses:
         '204':
-          description: 'GitHub repo connected'
+          description: 'GitHub repo set'
         '401':
           $ref: '#/components/responses/UnauthorizedErrorResponse'
         '403':
@@ -559,7 +559,7 @@ paths:
         '404':
           $ref: '#/components/responses/NotFoundErrorResponse'
     get:
-      summary: 'Get GitHub repo connected to the project'
+      summary: "Get project's GitHub repo"
       security:
         - bearerAuth: []
       tags:
@@ -579,6 +579,23 @@ paths:
             $ref: '#/components/responses/ForbiddenErrorResponse'
         '404':
             $ref: '#/components/responses/NotFoundErrorResponse'
+    delete:
+        summary: "Unset project's GitHub repo"
+        security:
+            - bearerAuth: []
+        tags:
+            - Project GitHub repo
+        parameters:
+            - $ref: '#/components/parameters/ProjectIdParam'
+        responses:
+            '204':
+              description: 'GitHub repo unset'
+            '401':
+                $ref: '#/components/responses/UnauthorizedErrorResponse'
+            '403':
+                $ref: '#/components/responses/ForbiddenErrorResponse'
+            '404':
+                $ref: '#/components/responses/NotFoundErrorResponse'
   /projects/{project-id}/github-repo/tags:
     get:
       summary: 'List GitHub repo tags'
